@@ -1,5 +1,11 @@
 2008-04-29  Richard Guenther  <rguenther@suse.de>
 
+	PR tree-optimization/36078
+	* tree-ssa-loop-ivcanon.c (tree_unroll_loops_completely):
+	Update virtual SSA form after cleaning up the CFG.
+
+2008-04-29  Richard Guenther  <rguenther@suse.de>
+
 	PR middle-end/15255
 	* fold-const.c (fold_binary): Fold (A + A) * C to A * 2*C.
 
